<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_background"
        android:paddingVertical="10dp"
        android:animateLayoutChanges="true">

        <TextView
            android:id="@+id/dialogTextPasswordChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/password_change"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/dialogTextPasswordInstruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/dialogTextPasswordChange"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/rounded_background_light"
            android:text="@string/password_change_instruction"
            android:textColor="@color/white"
            android:paddingVertical="10dp"
            android:paddingHorizontal="15dp"/>

        <EditText
            android:id="@+id/dialogEditNewPassword"
            style="@style/EditTextHint"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/dialogTextPasswordInstruction"
            android:hint="@string/new_password"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="12sp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/rounded_item"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/dialogEditConfirmPassword"
            style="@style/EditTextHint"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/dialogEditNewPassword"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/rounded_item"
            android:hint="@string/confirm_new_password"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="12sp"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/dialogButtonChangePassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/dialogEditConfirmPassword"
            android:background="@drawable/rounded_button_black"
            android:text="@string/change_password"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>