<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_background"
        android:padding="20dp">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/watchstorm_icon2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textWatchStorm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watch_storm"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLogo"
            android:layout_marginTop="2dp" />

        <TextView
            android:id="@+id/textWatchStormInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textWatchStorm"
            android:text="@string/watch_storm_info"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_background_light"
            android:padding="15dp"
            android:textAlignment="center"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/textWatchStormInfo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/rounded_background_light"
            android:padding="15dp"
            android:layout_marginTop="10dp">

            <EditText
                style="@style/EditTextHint"
                android:id="@+id/dialogEditLogin"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/rounded_item"
                android:hint="@string/login"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:inputType="text" />

            <EditText
                style="@style/EditTextHint"
                android:id="@+id/dialogEditPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintTop_toBottomOf="@id/dialogEditLogin"
                android:background="@drawable/rounded_item"
                android:hint="@string/password"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:layout_marginTop="10dp" />

            <Button
                android:id="@+id/dialogButtonSignIn"
                android:layout_width="110dp"
                android:layout_height="40dp"
                app:layout_constraintTop_toBottomOf="@id/dialogEditPassword"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/sign_in"
                android:background="@drawable/rounded_button_black"
                android:layout_marginTop="10dp" />

            <Button
                android:id="@+id/dialogButtonSignUp"
                android:layout_width="110dp"
                android:layout_height="40dp"
                app:layout_constraintTop_toBottomOf="@id/dialogEditPassword"
                app:layout_constraintStart_toEndOf="@id/dialogButtonSignIn"
                android:text="@string/sign_up"
                android:background="@drawable/rounded_button_black"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="20dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>