<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_background">

        <TextView
            android:id="@+id/textAccountDeleting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/account_deleting"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/textDeletingCaution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textAccountDeleting"
            android:text="@string/account_deleting_caution"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:drawableStart="@drawable/ic_caution"
            android:drawablePadding="10dp"
            android:drawableTint="@color/white"
            android:background="@drawable/rounded_background_light"
            android:paddingVertical="10dp"
            android:paddingHorizontal="10dp"/>

        <TextView
            android:id="@+id/textDeletingInstruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textDeletingCaution"
            android:text="@string/account_deleting_instruction"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:drawableStart="@drawable/ic_caution"
            android:drawablePadding="10dp"
            android:drawableTint="@color/white"
            android:background="@drawable/rounded_background_light"
            android:paddingVertical="10dp"
            android:paddingHorizontal="10dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintDeleteAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textDeletingInstruction"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_background_light"
            android:animateLayoutChanges="true">

            <TextView
                android:id="@+id/textDeletingConfirmation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/dialogEditDeletingUser"
                android:text="@string/deleting_confirmation"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/dialogEditDeletingUser"
                style="@style/EditTextHint"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/rounded_item"
                android:hint="@string/your_username"
                android:textColor="@color/white"
                android:layout_marginHorizontal="20dp"
                android:textAlignment="center"
                android:inputType="text"
                android:textSize="12sp"
                android:layout_marginBottom="10dp"
                android:clickable="false"
                android:visibility="gone"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>