<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AddMovieFragment"
    android:background="@color/grayPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_background"
        android:paddingVertical="20dp"
        android:paddingHorizontal="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clTitleYear"
            android:layout_width="280dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                style="@style/EditTextHint"
                android:id="@+id/editMovieTitle"
                android:layout_width="110dp"
                android:layout_height="50dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/rounded_item"
                android:hint="@string/movie_title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:inputType="text"/>

            <EditText
                style="@style/EditTextHint"
                android:id="@+id/editMovieYear"
                android:layout_width="110dp"
                android:layout_height="50dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/rounded_item"
                android:hint="@string/movie_year"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:inputType="number"
                android:maxLength="4"/>

            <Button
                android:id="@+id/buttonFindMovie"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/rounded_button_black"
                android:drawableTop="@drawable/ic_baseline_search"
                android:drawableTint="@color/black"
                android:paddingTop="12dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clImage"
            android:layout_width="280dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/clTitleYear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_item">

            <ProgressBar
                android:id="@+id/progressBarUpload"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:indeterminateTint="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="25dp"
                android:visibility="invisible"/>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieAnimationUploaded"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:lottie_rawRes="@raw/uploaded"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="19dp"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivSelectedImage"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="25dp"/>

            <TextView
                android:id="@+id/textSelectImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/select_image"
                android:textColor="@color/white"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/editMovieDescription"
            style="@style/EditTextHint"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/clImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/rounded_item"
            android:hint="@string/movie_description"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:paddingVertical="16dp"
            android:paddingHorizontal="35dp"
            android:inputType="textMultiLine"
            android:layout_marginTop="10dp"
            android:maxLines="14"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl"
            android:layout_width="280dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/editMovieDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp">

            <EditText
                style="@style/EditTextHint"
                android:id="@+id/editPlotRating"
                android:layout_width="90dp"
                android:layout_height="50dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/rounded_item"
                android:hint="@string/plot_rating"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:inputType="number"
                android:maxLength="3"/>

            <EditText
                style="@style/EditTextHint"
                android:id="@+id/editCastRating"
                android:layout_width="90dp"
                android:layout_height="50dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/editPlotRating"
                android:background="@drawable/rounded_item"
                android:hint="@string/cast_rating"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_marginStart="5dp"
                android:inputType="number"
                android:maxLength="3"/>

            <EditText
                style="@style/EditTextHint"
                android:id="@+id/editVisualRating"
                android:layout_width="90dp"
                android:layout_height="50dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/editCastRating"
                android:background="@drawable/rounded_item"
                android:hint="@string/visual_rating"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_marginStart="5dp"
                android:inputType="number"
                android:maxLength="3"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/buttonSaveRating"
            android:layout_width="280dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/cl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/rounded_button_black"
            android:text="@string/save_rating"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>