<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_background"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:animateLayoutChanges="true">

        <TextView
            android:id="@+id/dialogTextVerification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/verification"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/dialogTextAboutVerification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/dialogTextVerification"
            android:background="@drawable/rounded_background_light"
            android:layout_marginTop="10dp"
            android:text="@string/about_verified_status"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:drawableStart="@drawable/ic_caution"
            android:drawableTint="@color/white"
            android:drawablePadding="10dp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="20dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clVerificationProgress"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/dialogTextAboutVerification"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/rounded_background_light"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="20dp"
            android:animateLayoutChanges="true">

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/dialogProgressVerification"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:trackThickness="5dp"
                android:progress="0"
                app:trackColor="@color/progressBarBack"
                app:indicatorColor="@color/yellow"
                app:trackCornerRadius="50dp"/>

            <TextView
                android:id="@+id/dialogTextRelation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/dialogProgressVerification"
                android:text="@string/relation"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginStart="10dp"
                android:visibility="gone"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/dialogButtonVerify"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/clVerificationProgress"
            android:text="@string/verify_my_account"
            android:textSize="12sp"
            android:background="@drawable/rounded_button_black"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>